# pm_dash

./: .dockerignore  2026 Pyrolysis Petal - 24 Mar 2026.mpp  Atlas_phase1_100h_13Mar-MH.mpp  Dockerfile  MPMProject324.mpp  README.md  pyproject.toml
Docs/: PM dashboard for 7 projects with MS Project integration.md
data/: pm_dashboard.db
scripts/: backup_data.sh  restore_data.sh
src/pm_dashboard/: __init__.py  config.py  database.py  ingest.py  main.py  models.py  parser.py  projects.py  repository.py  scoring.py  seed.py  services.py
src/pm_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pm_dashboard/static/: style.css
src/pm_dashboard/templates/: attention.html  base.html  cockpit.html  dependencies.html  imports.html  portfolio.html  project_detail.html  project_workflow.html
tests/: conftest.py  test_app.py  test_ingest.py  test_parser.py  test_parser_integration.py  test_phase2.py  test_phase3.py
tools/mpp-parser/: pom.xml
tools/mpp-parser/src/main/java/com/pmdashboard/: MppDump.java
